yaml/prod-do/api-bot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-bot
  labels:
    app: sentiment
    type: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment
      type: bot
  template:
    metadata:
      labels:
        app: sentiment
        type: bot
    spec:
      containers:
        - name: sentiment-api-bot
          image: quartercog/sentiment-api-bot
          imagePullPolicy: "Always"
