yaml/prod-do/content-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-api
  labels:
    app: sentiment
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment
      type: api
  template:
    metadata:
      labels:
        app: sentiment
        type: api
    spec:
      containers:
        - name: sentiment-content-api
          image: quartercog/sentiment-content-api
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3001
