yaml/prod-do/ingress-do.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"

  name: ingress-sentiment
spec:
  rules:
    - host: www.sentiment-tracker.com
      http:
        paths:
          - backend:
              serviceName: sentiment-frontend
              servicePort: 80
            path: /
          - backend:
              serviceName: content-api
              servicePort: 3001
            path: /api/v1
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - www.sentiment-tracker.com
      secretName: sentiment-tls
