yaml/prod-do/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: sentiment-frontend
              servicePort: 80
          - path: /api
            backend:
              serviceName: content-api
              servicePort: 3001
